apps/goatlint/src/snapshots/_--import-plugin fixtures__cli__flow__index.mjs@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --import-plugin fixtures/cli/flow/index.mjs
working directory: 
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file with 128 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
