apps/goatlint/src/snapshots/_--import-plugin fixtures__cli__flow__index.mjs@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --import-plugin fixtures/cli/flow/index.mjs
working directory: 
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file with 95 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
